kubernetes/components/proxmox-proxy/ingress.yaml

---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/master/ingress.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${APP}-host
  annotations:
    reloader.stakater.com/auto: "true"
    external-dns.alpha.kubernetes.io/target: "${INTERNAL_DOMAIN}"
spec:
  ingressClassName: internal
  rules:
    - host: "${PROXMOX_HOST}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ${APP}-host
                port:
                  name: proxmox
